NULL =


iconsdir = $(datadir)/valadoc/icons


dist_icons_DATA =         \
	warning.png          \
	abstractclass.png    \
	abstractmethod.png   \
	staticmethod.png     \
	devhelpstyle.css     \
	wikistyle.css        \
	style.css            \
	class.png            \
	interface.png        \
	packages.png         \
	constant.png         \
	method.png           \
	property.png         \
	delegate.png         \
	errordomain.png      \
	namespace.png        \
	signal.png           \
	enum.png             \
	field.png            \
	package.png          \
	struct.png           \
	abstractproperty.png \
	constructor.png      \
	virtualmethod.png    \
	virtualproperty.png  \
	$(NULL)




