libvaladoc_sources = [
	'doclet.vala',
	'errorreporter.vala',
	'filehelper.vala',
	'moduleloader.vala',
	'settings.vala',
	'markupwriter.vala',
	'gtkdocmarkupwriter.vala',
	'devhelp-markupwriter.vala',
	'ctyperesolver.vala',
	'gtkdocrenderer.vala',
	'gvc-compat.c',
	'documentation/commentscanner.vala',
	'documentation/documentation.vala',
	'documentation/documentationparser.vala',
	'documentation/wiki.vala',
	'documentation/wikiscanner.vala',
	'documentation/gtkdoccommentparser.vala',
	'documentation/gtkdoccommentscanner.vala',
	'documentation/gtkdocmarkdownparser.vala',
	'documentation/gtkdocmarkdownscanner.vala',
	'documentation/importerhelper.vala',
	'documentation/girmetadata.vala',
	'importer/documentationimporter.vala',
	'importer/valadocdocumentationimporter.vala',
	'importer/valadocdocumentationimporterscanner.vala',
	'importer/girdocumentationimporter.vala',
	'importer/internalidregistrar.vala',
	'api/sourcecomment.vala',
	'api/girsourcecomment.vala',
	'api/attribute.vala',
	'api/array.vala',
	'api/callable.vala',
	'api/childsymbolregistrar.vala',
	'api/class.vala',
	'api/constant.vala',
	'api/delegate.vala',
	'api/enum.vala',
	'api/enumvalue.vala',
	'api/errorcode.vala',
	'api/errordomain.vala',
	'api/field.vala',
	'api/formalparameter.vala',
	'api/interface.vala',
	'api/item.vala',
	'api/method.vala',
	'api/namespace.vala',
	'api/node.vala',
	'api/nodetype.vala',
	'api/ownership.vala',
	'api/package.vala',
	'api/pointer.vala',
	'api/property.vala',
	'api/propertyaccessor.vala',
	'api/signal.vala',
	'api/signaturebuilder.vala',
	'api/sourcefile.vala',
	'api/struct.vala',
	'api/symbol.vala',
	'api/tree.vala',
	'api/typeparameter.vala',
	'api/typereference.vala',
	'api/typesymbol.vala',
	'api/visitor.vala',
	'api/driver.vala',
	'content/block.vala',
	'content/blockcontent.vala',
	'content/comment.vala',
	'content/contentfactory.vala',
	'content/contentelement.vala',
	'content/contentrenderer.vala',
	'content/contentvisitor.vala',
	'content/embedded.vala',
	'content/headline.vala',
	'content/inline.vala',
	'content/inlinetaglet.vala',
	'content/inlinecontent.vala',
	'content/wikilink.vala',
	'content/link.vala',
	'content/list.vala',
	'content/listitem.vala',
	'content/page.vala',
	'content/paragraph.vala',
	'content/warning.vala',
	'content/note.vala',
	'content/resourcelocator.vala',
	'content/run.vala',
	'content/sourcecode.vala',
	'content/styleattributes.vala',
	'content/symbollink.vala',
	'content/table.vala',
	'content/tablecell.vala',
	'content/tablerow.vala',
	'content/taglet.vala',
	'content/text.vala',
	'charts/chart.vala',
	'charts/chartfactory.vala',
	'charts/hierarchychart.vala',
	'charts/simplechartfactory.vala',
	'parser/manyrule.vala',
	'parser/oneofrule.vala',
	'parser/optionalrule.vala',
	'parser/parser.vala',
	'parser/parsercallback.vala',
	'parser/rule.vala',
	'parser/scanner.vala',
	'parser/sequencerule.vala',
	'parser/stubrule.vala',
	'parser/token.vala',
	'parser/tokentype.vala',
	'taglets/tagletdeprecated.vala',
	'taglets/tagletinheritdoc.vala',
	'taglets/tagletinit.vala',
	'taglets/tagletlink.vala',
	'taglets/tagletparam.vala',
	'taglets/tagletreturn.vala',
	'taglets/tagletsee.vala',
	'taglets/tagletsince.vala',
	'taglets/tagletthrows.vala',
	'highlighter/scanner.vala',
	'highlighter/codescanner.vala',
	'highlighter/xmlscanner.vala',
	'highlighter/codetoken.vala',
	'highlighter/highlighter.vala',
	'html/basicdoclet.vala',
	'html/htmlchartfactory.vala',
	'html/linkhelper.vala',
	'html/cssclassresolver.vala',
	'html/htmlmarkupwriter.vala',
	'html/htmlrenderer.vala',
]

libvaladoc_lib = shared_library(
	'valadoc@0@'.format(vala_version_suffix),
	libvaladoc_sources,
	dependencies: [gmodule_dep, valacore_dep, valacodegen_dep, libgvc_dep],
	soversion: '0.0.0',
	install: true,
	install_dir: [
		true,
		join_paths (get_option('includedir'), 'valadoc@0@'.format (vala_version_suffix)),
		true
	],
	c_args: ['-DPACKAGE_VALADOC_LIBDIR="@0@"'.format(join_paths(get_option('prefix'), get_option('libdir'), 'valadoc'))],
	vala_args: ['--use-header'],
	vala_header: 'valadoc.h',
	vala_vapi: 'valadoc@0@.vapi'.format(vala_version_suffix),
)

libvaladoc_dep = declare_dependency(link_with: [libvaladoc_lib], dependencies: [gmodule_dep, valacore_dep, libgvc_dep], include_directories: include_directories('.'))

configure_file(input: 'valadoc.deps.in', output: 'valadoc@0@.deps'.format(vala_version_suffix), configuration: pkgconf)

configure_file(
	input: 'valadoc.pc.in',
	output: 'valadoc@0@.pc'.format(vala_version_suffix),
	configuration: pkgconf,
	install_dir: pkg_install_dir,
)
